welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.error
arrayFront9:14: error: ';' expected but 'return' found.
  } return false
    ^