welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.code
def arrayFront9(nums:Array[Int]): Boolean = {
  val len: Int = nums.length
  if (len <= 4) {
    for (i <- nums) {
      if (i==9) {
        return true
      }
    }
  }
  else for (i<- 0 to 4) {
    if (nums(i)==9) {
      return true
    }
  } return false
  }